fix(layout): wrapped existing header in a header element

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,13 +24,13 @@
 }
 @keyframes saturbate {
   0% {
-      filter: saturate(2);
+    filter: saturate(2);
   }
   50% {
-      filter: saturate(4);
-  }   
+    filter: saturate(4);
+  }
   100% {
-      filter: saturate(2);
+    filter: saturate(2);
   }
 }
 
@@ -42,14 +42,15 @@ html {
 }
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 body {
+  display: flex;
+  flex-direction: column;
   background: url("/assets/img/bg.png");
   background-size: cover;
   background-position: center;
   box-sizing: border-box;
-  padding-top: 46px;
 }
 a {
   color: #ffffff;
@@ -69,7 +70,7 @@ p {
   font-size: 18px;
 }
 ul {
-  padding:0;
+  padding: 0;
 }
 li {
   list-style-type: none;
@@ -100,8 +101,6 @@ article {
   margin: 8px;
 }
 
-
-
 .section {
   margin: 8px;
 }
@@ -123,16 +122,18 @@ article {
 .linelink {
   display: block;
 }
+
+.page_container {
+  overflow: auto;
+}
+
 .page {
-  display: none;
   max-width: 675px;
-  height: calc(100% - 61px);
-  padding-top: 26px;
+  display: none;
   margin-left: auto;
   margin-right: auto;
   /*background: #070707a8;*/
   background: none;
-  overflow: auto;
 }
 .page p {
   margin-top: 2px;
@@ -210,13 +211,13 @@ article {
   background: #ffffff;
   color: #000000;
 }
-.rainbowtit {  
+.rainbowtit {
   animation: hue 8s infinite linear;
 }
-.dansen {  
+.dansen {
   animation: saturbate 0.5s infinite;
 }
-.acid {  
+.acid {
   animation: hue 6s infinite linear;
 }
 .dropdown-content {
@@ -266,7 +267,6 @@ article {
   display: flex;
   justify-content: center;
   column-gap: 20px;
-  position: absolute;
   top: 0;
   height: 45px;
   width: 100%;
